tests/specs/cli/otel_basic/uncaught.out
error: Uncaught (in promise) Error: uncaught
throw new Error("uncaught");
      ^
    at file:///[WILDCARD]/tests/specs/cli/otel_basic/uncaught.ts:2:7
{
  "spans": [],
  "logs": [
    {
      "timeUnixNano": "[WILDLINE]",
      "observedTimeUnixNano": "[WILDCARD]",
      "severityNumber": 9,
      "severityText": "INFO",
      "body": {
        "stringValue": "log 1\n"
      },
      "attributes": [],
      "droppedAttributesCount": 0,
      "flags": 0,
      "traceId": "",
      "spanId": ""
    },
    {
      "timeUnixNano": "[WILDLINE]",
      "observedTimeUnixNano": "[WILDCARD]",
      "severityNumber": 17,
      "severityText": "ERROR",
      "body": {
        "stringValue": "error: Uncaught (in promise) Error: uncaught\nthrow new Error(\"uncaught\");\n      ^\n    at file:///[WILDCARD]/tests/specs/cli/otel_basic/uncaught.ts:2:7"
      },
      "attributes": [],
      "droppedAttributesCount": 0,
      "flags": 0,
      "traceId": "",
      "spanId": ""
    }
  ],
  "metrics": []
}
