tests/specs/cli/otel_basic/uncaught.ts
console.log("log 1");
throw new Error("uncaught");
